--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -3,14 +3,14 @@
 
 <head>
     <title>Contact Us</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/normalize.css">
     <meta name="viewport" content="width=device-width">
 </head>
 
 
 <body>
-    <nav id="contact_nav">
+    <nav>
         <a href="index.html">Home</a>
         <a href="videos.html">Videos</a>
         <a href="contact.html">Contact Us</a>
@@ -18,7 +18,7 @@
     </nav>
 
 
-    <header class="main-header" id="contact_header">
+    <header class="main-header" >
             <h1>Barndo Fireworks</h1>
             <span class="subtitle">14425 Interstate 27 Service Road, Lubbock, TX 79403</span>
             <span class="phone-number">Call us at 806-748-4100</span>
@@ -60,5 +60,11 @@
         </form>
     </div>
 </div>
+
+
+<footer>
+    <p class="footer-text">Barndo Fireworks &copy; 2018</p>
+    <p class="footer-text">Lubbock, Texas</p>
+</footer>
 
 </body>
