--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Barndo Fireworks</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/normalize.css">
     <meta name="viewport" content="width=device-width">
 </head>
 
@@ -36,16 +36,16 @@
     </div>
     
     <div class="firework-pics">
-        <img src="img/firework1.png" alt="fireworks" class="firework1">
-        <img src="img/firework2.png" alt="fireworks" class="firework2">
-        <img src="img/firework3.png" alt="fireworks" class="firework3">
-        <img src="img/firework4.png" alt="fireworks" class="firework4">
+        <img src="../img/firework1.png" alt="fireworks" id="firework1" class="grow">
+        <img src="../img/firework2.png" alt="fireworks" id="firework2" class="grow">
+        <img src="../img/firework3.png" alt="fireworks" id="firework3" class="grow">
+        <img src="../img/firework4.png" alt="fireworks" id="firework4" class="grow">
     </div>
 
     <div class="columns">
 
         <div class="featured">
-            <h2>Featured Products</h2>
+            <h2 class="frontpage_h2_titles">Featured Products</h2>
                 <ul>
                     <li>#1000 Professional Display 6s</li>
                     <li>All Silver Salute HD 7s</li>
@@ -65,7 +65,7 @@
         </div>
 
         <div class="new">
-            <h2>New in 2018</h2>
+            <h2 class="frontpage_h2_titles">New in 2018</h2>
                 <ul>
                     <li>Aerials HD</li>
                     <li>Assortments</li>
