Re-organized files

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
     <title>Barndo Fireworks</title>
-    <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="../CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
     <meta name="viewport" content="width=device-width">
 </head>
 
 <nav>
-        <a href="index.html">Home</a>
-         <a href="videos.html">Videos</a>
-         <a href="contact.html">Contact Us</a>
-         <a href="blackcat.html">Why Black Cat</a>
+        <a href="HTML/index.html">Home</a>
+         <a href="HTML/videos.html">Videos</a>
+         <a href="HTML/contact.html">Contact Us</a>
+         <a href="HTML/blackcat.html">Why Black Cat</a>
 </nav>
 
 <header class="main-header">
@@ -36,10 +36,10 @@
     </div>
     
     <div class="firework-pics">
-        <img src="../img/firework1.png" alt="fireworks" id="firework1" class="grow">
-        <img src="../img/firework2.png" alt="fireworks" id="firework2" class="grow">
-        <img src="../img/firework3.png" alt="fireworks" id="firework3" class="grow">
-        <img src="../img/firework4.png" alt="fireworks" id="firework4" class="grow">
+        <img src="img/firework1.png" alt="fireworks" id="firework1" class="grow">
+        <img src="img/firework2.png" alt="fireworks" id="firework2" class="grow">
+        <img src="img/firework3.png" alt="fireworks" id="firework3" class="grow">
+        <img src="img/firework4.png" alt="fireworks" id="firework4" class="grow">
     </div>
 
     <div class="columns">
