--- a/HTML/blackcat.html
+++ b/HTML/blackcat.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav id="blackcat_nav">
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="videos.html">Videos</a>
         <a href="contact.html">Contact Us</a>
         <a href="blackcat.html">Why Black Cat</a>
