--- a/HTML/videos.html
+++ b/HTML/videos.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav>
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="videos.html">Videos</a>
         <a href="contact.html">Contact Us</a>
         <a href="blackcat.html">Why Black Cat</a>
